--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^6.10.1",
     "zod": "^4.0.15"
   },
   "devDependencies": {
