--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+  "dev": "nodemon src/index.js",
+  "start": "node src/index.js"
+  }
+  ,
   "dependencies": {
     "@auth/express": "^0.11.0",
     "@clerk/backend": "^2.6.3",
