--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-  "dev": "nodemon scr/index.js",
-  "start": "node scr/index.js"
+  "dev": "nodemon index.js",
+  "start": "node index.js"
   },
 
   "dependencies": {
