--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "scripts": {
-  "dev": "nodemon index.js",
-  "start": "node index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
-
   "dependencies": {
     "@auth/express": "^0.11.0",
     "@clerk/backend": "^2.6.3",
@@ -19,6 +18,7 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
     "nodemailer": "^6.10.1",
+    "serverless-http": "^3.2.0",
     "zod": "^4.0.15"
   },
   "devDependencies": {
