--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.js",
+      "src": "scr/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "index.js" }
+    {
+      "src": "/(.*)",
+      "dest": "scr/index.js"
+    }
   ]
 }
