Add serverless-http dependency

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "my-express-app",
+  "version": "1.0.0",
   "main": "src/index.js",
   "scripts": {
     "dev": "nodemon scr/index.js",
